vendor/bifrost/tls/bindings/ssl.odin


	// SSL_CTX_set_max_proto_version sets the maximum protocol version for |ctx| to
	// |version|. If |version| is zero, the default maximum version is used. It
	// returns one on success and zero if |version| is invalid.
	SSL_CTX_set_max_proto_version :: proc(ctx: ^SSL_CTX, version: u16) -> i32 ---

	// SSL_CTX_get_min_proto_version returns the minimum protocol version for |ctx|
	SSL_CTX_get_min_proto_version :: proc(ctx: ^SSL_CTX) -> u16 ---

	// SSL_CTX_get_max_proto_version returns the maximum protocol version for |ctx|
	SSL_CTX_get_max_proto_version :: proc(ctx: ^SSL_CTX) -> u16 ---

	// SSL_set_min_proto_version sets the minimum protocol version for |ssl| to
	// |version|. If |version| is zero, the default minimum version is used. It
	// returns one on success and zero if |version| is invalid.
	SSL_set_min_proto_version :: proc(ssl: ^SSL, version: u16) -> i32 ---

	// SSL_set_max_proto_version sets the maximum protocol version for |ssl| to
	// |version|. If |version| is zero, the default maximum version is used. It
	// returns one on success and zero if |version| is invalid.
	SSL_set_max_proto_version :: proc(ssl: ^SSL, version: u16) -> i32 ---

	// SSL_get_min_proto_version returns the minimum protocol version for |ssl|. If
	// the connection's configuration has been shed, 0 is returned.
	SSL_get_min_proto_version :: proc(ssl: ^SSL) -> u16 ---

	// SSL_get_max_proto_version returns the maximum protocol version for |ssl|. If
	// the connection's configuration has been shed, 0 is returned.
	SSL_get_max_proto_version :: proc(ssl: ^SSL) -> u16 ---

	// SSL_version returns the TLS or DTLS protocol version used by |ssl|, which is
	// one of the |*_VERSION| values. (E.g. |TLS1_2_VERSION|.) Before the version
	// is negotiated, the result is undefined.
	SSL_version :: proc(ssl: ^SSL) -> i32 ---
}

// Options.
//
// Options configure protocol behavior.

// SSL_OP_NO_QUERY_MTU, in DTLS, disables querying the MTU from the underlying
// |BIO|. Instead, the MTU is configured with |SSL_set_mtu|.
SSL_OP_NO_QUERY_MTU :: 0x00001000

// SSL_OP_NO_TICKET disables session ticket support (RFC 5077).
SSL_OP_NO_TICKET :: 0x00004000

// SSL_OP_CIPHER_SERVER_PREFERENCE configures servers to select ciphers and
// ECDHE curves according to the server's preferences instead of the
// client's.
SSL_OP_CIPHER_SERVER_PREFERENCE :: 0x00400000

// The following flags toggle individual protocol versions. This is deprecated.
// Use |SSL_CTX_set_min_proto_version| and |SSL_CTX_set_max_proto_version|
// instead.
SSL_OP_NO_TLSv1    :: 0x04000000
SSL_OP_NO_TLSv1_2  :: 0x08000000
SSL_OP_NO_TLSv1_1  :: 0x10000000
SSL_OP_NO_TLSv1_3  :: 0x20000000
SSL_OP_NO_DTLSv1   :: SSL_OP_NO_TLSv1
SSL_OP_NO_DTLSv1_2 :: SSL_OP_NO_TLSv1_2

// Modes.
//
// Modes configure API behavior.

// SSL_MODE_ENABLE_PARTIAL_WRITE, in TLS, allows |SSL_write| to complete with a
// partial result when the only part of the input was written in a single
// record. In DTLS, it does nothing.
SSL_MODE_ENABLE_PARTIAL_WRITE :: 0x00000001

// SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER, in TLS, allows retrying an incomplete
// |SSL_write| with a different buffer. However, |SSL_write| still assumes the
// buffer contents are unchanged. This is not the default to avoid the
// misconception that non-blocking |SSL_write| behaves like non-blocking
// |write|. In DTLS, it does nothing.
SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER :: 0x00000002
SSL_MODE_NO_AUTO_CHAIN              :: 0x00000008

// SSL_MODE_ENABLE_FALSE_START allows clients to send application data before
// receipt of ChangeCipherSpec and Finished. This mode enables full handshakes
// to 'complete' in one RTT. See RFC 7918.
//
// When False Start is enabled, |SSL_do_handshake| may succeed before the
// handshake has completely finished. |SSL_write| will function at this point,
// and |SSL_read| will transparently wait for the final handshake leg before
// returning application data. To determine if False Start occurred or when the
// handshake is completely finished, see |SSL_in_false_start|, |SSL_in_init|,
// and |SSL_CB_HANDSHAKE_DONE| from |SSL_CTX_set_info_callback|.
SSL_MODE_ENABLE_FALSE_START :: 0x00000080

// SSL_MODE_CBC_RECORD_SPLITTING causes multi-byte CBC records in TLS 1.0 to be
// split in two: the first record will contain a single byte and the second will
// contain the remainder. This effectively randomises the IV and prevents BEAST
// attacks.
SSL_MODE_CBC_RECORD_SPLITTING :: 0x00000100

// SSL_MODE_NO_SESSION_CREATION will cause any attempts to create a session to
// fail with SSL_R_SESSION_MAY_NOT_BE_CREATED. This can be used to enforce that
// session resumption is used for a given SSL*.
SSL_MODE_NO_SESSION_CREATION :: 0x00000200

// SSL_MODE_SEND_FALLBACK_SCSV sends TLS_FALLBACK_SCSV in the ClientHello.
// To be set only by applications that reconnect with a downgraded protocol
// version; see RFC 7507 for details.
//
// DO NOT ENABLE THIS if your application attempts a normal handshake. Only use
// this in explicit fallback retries, following the guidance in RFC 7507.
SSL_MODE_SEND_FALLBACK_SCSV :: 0x00000400

@(default_calling_convention="c")
foreign lib {
	// SSL_CTX_set0_buffer_pool sets a |CRYPTO_BUFFER_POOL| that will be used to
	// store certificates. This can allow multiple connections to share
	// certificates and thus save memory.
	//
	// The SSL_CTX does not take ownership of |pool| and the caller must ensure
	// that |pool| outlives |ctx| and all objects linked to it, including |SSL|,
	// |X509| and |SSL_SESSION| objects. Basically, don't ever free |pool|.
	SSL_CTX_set0_buffer_pool :: proc(ctx: ^SSL_CTX, pool: ^CRYPTO_BUFFER_POOL) ---

	// SSL_CREDENTIAL_new_x509 returns a new, empty X.509 credential, or NULL on
	// error. Callers should release the result with |SSL_CREDENTIAL_free| when
	// done.
	//
	// Callers should configure a certificate chain and private key on the
	// credential, along with other properties, then add it with
	// |SSL_CTX_add1_credential|.
	SSL_CREDENTIAL_new_x509 :: proc() -> ^SSL_CREDENTIAL ---

	// SSL_CREDENTIAL_up_ref increments the reference count of |cred|.
	SSL_CREDENTIAL_up_ref :: proc(cred: ^SSL_CREDENTIAL) ---

	// SSL_CREDENTIAL_free decrements the reference count of |cred|. If it reaches
	// zero, all data referenced by |cred| and |cred| itself are released.
	SSL_CREDENTIAL_free :: proc(cred: ^SSL_CREDENTIAL) ---

	// SSL_CREDENTIAL_set1_private_key sets |cred|'s private key to |cred|. It
	// returns one on success and zero on failure.
	SSL_CREDENTIAL_set1_private_key :: proc(cred: ^SSL_CREDENTIAL, key: ^EVP_PKEY) -> i32 ---

	// SSL_CREDENTIAL_set1_signing_algorithm_prefs configures |cred| to use |prefs|
	// as the preference list when signing with |cred|'s private key. It returns one
	// on success and zero on error. |prefs| should not include the internal-only
	// value |SSL_SIGN_RSA_PKCS1_MD5_SHA1|.
	//
	// It is an error to call this function with delegated credentials (see
	// |SSL_CREDENTIAL_new_delegated|) because delegated credentials already
	// constrain the key to a single algorithm.
	SSL_CREDENTIAL_set1_signing_algorithm_prefs :: proc(cred: ^SSL_CREDENTIAL, prefs: ^u16, num_prefs: c.size_t) -> i32 ---

	// SSL_CREDENTIAL_set1_cert_chain sets |cred|'s certificate chain, starting from
	// the leaf, to |num_cert|s certificates from |certs|. It returns one on success
	// and zero on error.
	SSL_CREDENTIAL_set1_cert_chain :: proc(cred: ^SSL_CREDENTIAL, certs: ^^CRYPTO_BUFFER, num_certs: c.size_t) -> i32 ---

	// SSL_CREDENTIAL_set1_ocsp_response sets |cred|'s stapled OCSP response to
	// |ocsp|. It returns one on success and zero on error.
	SSL_CREDENTIAL_set1_ocsp_response :: proc(cred: ^SSL_CREDENTIAL, ocsp: ^CRYPTO_BUFFER) -> i32 ---

	// SSL_CREDENTIAL_set1_certificate_properties parses
	// |certificate_property_list| as a CertificatePropertyList (see Section 6 of
	// draft-ietf-tls-trust-anchor-ids-00) and applies recognized properties to
	// |cred|. It returns one on success and zero on error. It is an error if
	// |certificate_property_list| does not parse correctly, or if any recognized
	// properties from |certificate_property_list| cannot be applied to |cred|.
	//
	// CertificatePropertyList is an extensible structure which allows serving
	// properties of a certificate chain to be passed from a CA, through an
	// application's issuance and configuration pipeline, and to the TLS serving
	// logic, without requiring application changes for each property defined.
	//
	// BoringSSL currently supports the following properties:
	// * trust_anchor_identifier (see |SSL_CREDENTIAL_set1_trust_anchor_id|)
	//
	// Note this function does not automatically enable issuer matching. Callers
	// must separately call |SSL_CREDENTIAL_set_must_match_issuer| if desired.
	SSL_CREDENTIAL_set1_certificate_properties :: proc(cred: ^SSL_CREDENTIAL, cert_property_list: ^CRYPTO_BUFFER) -> i32 ---

	// SSL_CREDENTIAL_set1_signed_cert_timestamp_list sets |cred|'s list of signed
	// certificate timestamps |sct_list|. |sct_list| must contain one or more SCT
	// structures serialised as a SignedCertificateTimestampList (see
	// https://tools.ietf.org/html/rfc6962#section-3.3) – i.e. each SCT is prefixed
	// by a big-endian, uint16 length and the concatenation of one or more such
	// prefixed SCTs are themselves also prefixed by a uint16 length. It returns one
	// on success and zero on error.
	SSL_CREDENTIAL_set1_signed_cert_timestamp_list :: proc(cred: ^SSL_CREDENTIAL, sct_list: ^CRYPTO_BUFFER) -> i32 ---

	// SSL_CREDENTIAL_set_must_match_issuer configures whether |cred| should check
	// if the peer supports the certificate chain's issuer.
	//
	// If |match| is non-zero, |cred| will only be applicable when the certificate
	// chain is issued by some CA requested by the peer in the
	// certificate_authorities extension or, if |cred| has a trust anchor ID (see
	// |SSL_CREDENTIAL_set1_trust_anchor_id|), the trust_anchors extension. |cred|'s
	// certificate chain must then be a correctly ordered certification path.
	//
	// If |match| is zero (default), |cred| will not be conditioned on the peer's
	// requested CAs. This can be used for certificate chains that are assumed to be
	// usable by most peers.
	//
	// This setting can be used for certificate chains that may not be usable by all
	// peers, e.g. chains with fewer cross-signs or issued from a newer CA. The
	// credential list is tried in order, so more specific credentials that enable
	// issuer matching should generally be ordered before less specific credentials
	// that do not.
	SSL_CREDENTIAL_set_must_match_issuer :: proc(cred: ^SSL_CREDENTIAL, match: i32) ---

	// SSL_CTX_add1_credential appends |cred| to |ctx|'s credential list. It returns
	// one on success and zero on error. The credential list is maintained in order
	// of decreasing preference, so earlier calls are preferred over later calls.
	//
	// After calling this function, it is an error to modify |cred|. Doing so may
	// result in inconsistent handshake behavior or race conditions.
	SSL_CTX_add1_credential :: proc(ctx: ^SSL_CTX, cred: ^SSL_CREDENTIAL) -> i32 ---

	// SSL_add1_credential appends |cred| to |ssl|'s credential list. It returns one
	// on success and zero on error. The credential list is maintained in order of
	// decreasing preference, so earlier calls are preferred over later calls.
	//
	// After calling this function, it is an error to modify |cred|. Doing so may
	// result in inconsistent handshake behavior or race conditions.
	SSL_add1_credential :: proc(ssl: ^SSL, cred: ^SSL_CREDENTIAL) -> i32 ---

	// SSL_certs_clear removes all credentials configured on |ssl|. It also removes
	// the certificate chain and private key on the legacy credential.
	SSL_certs_clear :: proc(ssl: ^SSL) ---
